--- a/greatwall/index.html
+++ b/greatwall/index.html
@@ -33,6 +33,22 @@
             <div class="four">尤</div>
             <div class="five">裡</div>
         </div>
+        <div class="secondrowcont">
+            <div class="secondrow">
+                <div class="nine">大</div>
+                <div class="twelve">儒</div>
+                <div class="eleven">字</div>
+                <div class="ten">阴</div>
+                <div class="six">体</div>
+                <div class="seven">龙</div>
+                <div class="eight">里</div>
+                <div class="one">显</div>
+                <div class="two">汉</div>
+                <div class="three">漢</div>
+                <div class="four">尤</div>
+                <div class="five">裡</div>
+            </div>
+        </div>
         <div class="container">
             <a href="/menu.html">FULL MENU</a>
             <a href="">FEELING LUCKY ?</a>
