--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
-<body>
+<body id="body">
     <!--header-->
     <div class="header">
         <div class="container">
@@ -20,8 +20,8 @@
                 <img src="/images/logo.png" alt="">
             </div>
             <ul>
-                <li>HOME</li>
-                <li>ABOUT ME</li>
+                <li><a class="active" href="index.html">HOME</a></li>
+                <li><a href="aboutme.html">ABOUT ME</a></li>
                 <li>PROJECTS</li>
             </ul>
             <div class="bars">
@@ -29,11 +29,12 @@
             </div>
         </div>
     </div>
+    <!--sidelist-->
     <div class="sidelist">
         <div class="closemenu">X</div>
         <ul>
-            <li>HOME</li>
-            <li>ABOUT ME</li>
+            <li><a class="active" href="index.html">HOME</a></li>
+            <li><a href="aboutme.html">ABOUT ME</a></li>
             <li>PROJECTS</li>
         </ul>
     </div>
@@ -49,10 +50,37 @@
             <div class="landingimg">
                 <div class="pimgtwo"></div>
                 <div class="pimg">
+                    <div>
                         <img src="/images/cropped.png" alt="">
-                        <img src="/images/Rectangle 2.png" alt="">
                     </div>
+                    <img src="/images/Rectangle 2.png" alt="">
+                </div>
             </div>
+        </div>
+    </div>
+    <!--projects-->
+    <div class="projects">
+        <div class="container">
+            <div class="project">
+                <div class="firstsection"></div>
+                <div class="secondsection"></div>
+            </div>
+            <div class="project">
+                <div class="firstsection"></div>
+                <div class="secondsection"></div>
+            </div>
+            <div class="project">
+                <div class="firstsection"></div>
+                <div class="secondsection"></div>
+            </div>
+        </div>
+    </div>
+    <!--footer-->
+    <div class="footer">
+        <div class="container">
+            <a href="mailto:omaressam521@gmail.com">
+                <i class="fa-regular fa-envelope"></i>
+            </a>
         </div>
     </div>
     <!--script-->
