--- a/portfolio/aboutme.html
+++ b/portfolio/aboutme.html
@@ -35,7 +35,7 @@
             <div class="closemenu">X</div>
             <ul>
                 <li><a href="index.html">HOME</a></li>
-                <li><a class="active" href="aboutme.html">ABOUT ME</a></li>
+                <li><a class="active" href="" data-primary-target='aboutme.html' data-secondary-target="https://zeeeka.github.io/portfolio/aboutme.html">ABOUT ME</a></li>
                 <li>PROJECTS</li>
             </ul>
         </div>
