--- a/portfolio/aboutme.html
+++ b/portfolio/aboutme.html
@@ -46,7 +46,7 @@
                 <div class="pimgtwo"></div>
                 <div class="pimg">
                     <div>
-                        <img src="/images/cropped.png" alt="">
+                        <img src="https://zeeeka.github.io/portfolio/images/cropped.png" alt="">
                     </div>
                     <img src="/images/Rectangle 2.png" alt="">
                 </div>
