--- a/portfolio/aboutme.html
+++ b/portfolio/aboutme.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
-<body>
+<body id="body">
         <!--header-->
         <div class="header">
             <div class="container">
@@ -23,7 +23,6 @@
                 <ul>
                     <li><a href="index.html">HOME</a></li>
                     <li><a class="active" href="aboutme.html">ABOUT ME</a></li>
-                    <li>PROJECTS</li>
                 </ul>
                 <div class="bars">
                     <i class="fa-solid fa-bars"></i>
@@ -36,7 +35,6 @@
             <ul>
                 <li><a href="index.html">HOME</a></li>
                 <li><a class="active" href="" data-primary-target='aboutme.html' data-secondary-target="https://zeeeka.github.io/portfolio/aboutme.html">ABOUT ME</a></li>
-                <li>PROJECTS</li>
             </ul>
         </div>
         <div class="transparent"></div>
@@ -46,7 +44,7 @@
                 <div class="pimgtwo"></div>
                 <div class="pimg">
                     <div>
-                        <img src="https://zeeeka.github.io/portfolio/images/cropped.png" alt="">
+                        <img src="/images/cropped.png" alt="">
                     </div>
                     <img src="/images/Rectangle 2.png" alt="">
                 </div>
