--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -22,7 +22,6 @@
             <ul>
                 <li><a class="active" href="index.html">HOME</a></li>
                 <li><a href="aboutme.html">ABOUT ME</a></li>
-                <li>PROJECTS</li>
             </ul>
             <div class="bars">
                 <i class="fa-solid fa-bars"></i>
@@ -35,7 +34,6 @@
         <ul>
             <li><a class="active" href="index.html">HOME</a></li>
             <li><a href="aboutme.html">ABOUT ME</a></li>
-            <li>PROJECTS</li>
         </ul>
     </div>
     <div class="transparent"></div>
@@ -63,15 +61,25 @@
         <div class="container">
             <div class="project">
                 <div class="firstsection"></div>
-                <div class="secondsection"></div>
+                <div class="secondsection">
+                    <h3>WATCH!</h3>
+                    <p>hand watches e-commerce website with features like: <br>
+                    <ul>
+                        <li>search engine</li>
+                        <li>categorical filtering</li>
+                        <li>shuffle menu</li>
+                    </ul>
+                    </p>
+                    <a href="">check it out</a>
+                </div>
             </div>
             <div class="project">
                 <div class="firstsection"></div>
-                <div class="secondsection"></div>
-            </div>
-            <div class="project">
-                <div class="firstsection"></div>
-                <div class="secondsection"></div>
+                <div class="secondsection">
+                    <h3>elzero</h3>
+                    <p>a website designed by osama elzero with a lot of animations</p>
+                    <a href="">check it out</a>
+                </div>
             </div>
         </div>
     </div>
