--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -49,9 +49,9 @@
                 <div class="pimgtwo"></div>
                 <div class="pimg">
                     <div>
-                        <img src="/images/cropped.png" alt="">
+                        <img src="https://github.com/zeeeka/zeeeka.github.io/blob/main/portfolio/images/cropped.png" alt="">
                     </div>
-                    <img src="/images/Rectangle 2.png" alt="">
+                    <img src="https://github.com/zeeeka/zeeeka.github.io/blob/main/portfolio/images/Rectangle%202.png" alt="">
                 </div>
             </div>
         </div>
@@ -70,7 +70,7 @@
                         <li>shuffle menu</li>
                     </ul>
                     </p>
-                    <a href="">check it out</a>
+                    <a href="https://zeeeka.github.io/watch!/index.html">check it out</a>
                 </div>
             </div>
             <div class="project">
@@ -78,7 +78,7 @@
                 <div class="secondsection">
                     <h3>elzero</h3>
                     <p>a website designed by osama elzero with a lot of animations</p>
-                    <a href="">check it out</a>
+                    <a href="https://zeeeka.github.io/elzero/index.html">check it out</a>
                 </div>
             </div>
         </div>
