--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>omar essam</title>
-    <link rel="icon" type="image/x-icon" href="/images/logoinverted.png">
+    <link rel="icon" type="image/x-icon" href="https://github.com/zeeeka/zeeeka.github.io/blob/main/portfolio/images/logoinverted.png">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,7 +17,7 @@
     <div class="header">
         <div class="container">
             <div class="logo">
-                <img src="/images/logo.png" alt="">
+                <img src="https://github.com/zeeeka/zeeeka.github.io/blob/main/portfolio/images/logo.png" alt="">
             </div>
             <ul>
                 <li><a class="active" href="index.html">HOME</a></li>
