--- a/watch!/vintage.html
+++ b/watch!/vintage.html
@@ -19,7 +19,7 @@
         <div class="container">
             <a href="vintage.html" style="color: #D11520;">vintage</a>
             <a href="women.html" >women</a>
-            <div><img src="images/logo.png" alt=""></div>
+            <div id="imagelogo"><img src="images/logo.png" alt=""></div>
             <a href="men.html">men</a>
             <a href="luxury.html" >luxury</a>
         </div>
