--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>omar essam</title>
-    <link rel="icon" type="image/x-icon" href="https://github.com/zeeeka/zeeeka.github.io/blob/main/portfolio/images/logoinverted.png">
+    <link rel="icon" type="image/x-icon" href="images/logoinverted.png">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -49,9 +49,9 @@
                 <div class="pimgtwo"></div>
                 <div class="pimg">
                     <div>
-                        <img src="https://github.com/zeeeka/zeeeka.github.io/blob/main/portfolio/images/cropped.png" alt="">
+                        <img src="images/cropped.png" alt="">
                     </div>
-                    <img src="https://github.com/zeeeka/zeeeka.github.io/blob/main/portfolio/images/Rectangle%202.png" alt="">
+                    <img src="images/Rectangle 2.png" alt="">
                 </div>
             </div>
         </div>
