--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>omar essam</title>
+    <title>OMAR</title>
     <link rel="icon" type="image/x-icon" href="images/logoinverted.png">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/all.min.css">
