--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -17,7 +17,7 @@
     <div class="header">
         <div class="container">
             <div class="logo">
-                <img src="https://github.com/zeeeka/zeeeka.github.io/blob/main/portfolio/images/logo.png" alt="">
+                <img src="images/logo.png" alt="">
             </div>
             <ul>
                 <li><a class="active" href="index.html">HOME</a></li>
