--- a/countryquiz/index.html
+++ b/countryquiz/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Country Quiz</title>
 </head>
 <body>
     <div id="questioncontainer">
@@ -13,6 +13,7 @@
             <button id="startbutton">
                 start the game
             </button>
+            <h3>this game is developed by omar essam</h3>
         </div>
         <div id="questionscreen">
             <h2 id="quizquestion"></h2>
