--- a/monitorcounter/index.html
+++ b/monitorcounter/index.html
@@ -193,10 +193,80 @@
 
 <script>
 // Employee list with BMS ID, Name, Production Date
+// Employee list with BMS ID, Name, Production Date
 const employees = [
     {bms:"6010910", name:"Abdelrahman Diab", prodDate:"23/07/2025"},
     {bms:"6008171", name:"Ahmed Sobeih", prodDate:"14/07/2025"},
-    // ... (keep all your employees as before)
+    {bms:"6010918", name:"Ahmed Ghobashy", prodDate:"23/07/2025"},
+    {bms:"5130480", name:"Aya Megahed", prodDate:"16/06/2025"},
+    {bms:"6010925", name:"Eman Ahmed", prodDate:"23/07/2025"},
+    {bms:"6010928", name:"Eyad Elzaiaty", prodDate:"23/07/2025"},
+    {bms:"5972350", name:"Ezzeldin Hassan", prodDate:"16/06/2025"},
+    {bms:"5968193", name:"Fatma Elrefaey", prodDate:"16/06/2025"},
+    {bms:"6010931", name:"Khadija Elsebaei", prodDate:"23/07/2025"},
+    {bms:"5974279", name:"Mohamed Abdelgalil", prodDate:"16/06/2025"},
+    {bms:"5972352", name:"Mohamed Obeid", prodDate:"16/06/2025"},
+    {bms:"5972356", name:"Mohamed Gadallah", prodDate:"16/06/2025"},
+    {bms:"6008206", name:"Rahma Abdelghany", prodDate:"14/07/2025"},
+    {bms:"6008207", name:"Salma Mohamed", prodDate:"14/07/2025"},
+    {bms:"5976968", name:"Samar Mahran", prodDate:"16/06/2025"},
+    {bms:"5974280", name:"Seif Elsayed", prodDate:"16/06/2025"},
+    {bms:"6003294", name:"Abdelrahman Shalaby", prodDate:"14/07/2025"},
+    {bms:"6003298", name:"Abdelrahman Afifi", prodDate:"14/07/2025"},
+    {bms:"5937494", name:"Abdelrahman Ibrahim", prodDate:"26/05/2025"},
+    {bms:"6003311", name:"Abdelrahman Hussein", prodDate:"14/07/2025"},
+    {bms:"6003323", name:"Abdullah Sayed", prodDate:"14/07/2025"},
+    {bms:"5937501", name:"Ahmed Taha", prodDate:"26/05/2025"},
+    {bms:"6003328", name:"Ammar Ahmed", prodDate:"14/07/2025"},
+    {bms:"6003335", name:"Basma Othman", prodDate:"14/07/2025"},
+    {bms:"5913368", name:"Belal Nafie", prodDate:"28/04/2025"},
+    {bms:"5913369", name:"Kirolous Abdelmasih", prodDate:"28/04/2025"},
+    {bms:"6012436", name:"Mohamed Abbas", prodDate:"23/07/2025"},
+    {bms:"5937509", name:"Mohamed Dahy", prodDate:"26/05/2025"},
+    {bms:"5905740", name:"Mohamed Ali", prodDate:"28/04/2025"},
+    {bms:"5937511", name:"Omar Hussein", prodDate:"26/05/2025"},
+    {bms:"6010932", name:"Sawsan Hussein", prodDate:"23/07/2025"},
+    {bms:"5905742", name:"Shorouk Abdelhamid", prodDate:"28/04/2025"},
+    {bms:"6010941", name:"Ziad Shilan", prodDate:"23/07/2025"},
+    {bms:"5972321", name:"Ahmed Kassem", prodDate:"16/06/2025"},
+    {bms:"6008155", name:"Ahmed Hassan", prodDate:"14/07/2025"},
+    {bms:"6014920", name:"Ahmed Mohamed Ali", prodDate:"23/07/2025"},
+    {bms:"6012439", name:"Ahmed Youssef", prodDate:"23/07/2025"},
+    {bms:"4875594", name:"Enas Salem", prodDate:"28/04/2025"},
+    {bms:"6003343", name:"Gamal Mohamed", prodDate:"14/07/2025"},
+    {bms:"5633871", name:"Habiba Rashwan", prodDate:"16/06/2025"},
+    {bms:"5939059", name:"Karim Selim", prodDate:"26/05/2025"},
+    {bms:"5937507", name:"Menna Abdelrahman", prodDate:"26/05/2025"},
+    {bms:"5968196", name:"Mohamed Eltony", prodDate:"16/06/2025"},
+    {bms:"5512682", name:"Mohamed Khattab", prodDate:"14/07/2025"},
+    {bms:"6003357", name:"Mohamed Mahmoud", prodDate:"14/07/2025"},
+    {bms:"6003361", name:"Mohamed Mohamed", prodDate:"14/07/2025"},
+    {bms:"6014919", name:"Mohrael Ibrahim", prodDate:"23/07/2025"},
+    {bms:"5318630", name:"Mostafa Abdelbary", prodDate:"16/06/2025"},
+    {bms:"6003363", name:"Reham Ramadan", prodDate:"14/07/2025"},
+    {bms:"5937540", name:"Shahd Hassan", prodDate:"26/05/2025"},
+    {bms:"5908489", name:"Tasneem Mahmoud", prodDate:"28/04/2025"},
+    {bms:"5974276", name:"Abdelrahman Desouky", prodDate:"16/06/2025"},
+    {bms:"6024457", name:"Abdelrahman-Hussein Omar", prodDate:"11/08/2025"},
+    {bms:"5937497", name:"Abdelrahman Fakhreldin", prodDate:"26/05/2025"},
+    {bms:"6024461", name:"Ali Mosaad", prodDate:"11/08/2025"},
+    {bms:"6024463", name:"Engy Khorshed", prodDate:"11/08/2025"},
+    {bms:"5937503", name:"Hadeer Shaarawy", prodDate:"26/05/2025"},
+    {bms:"6025948", name:"Kirollos Bekhit", prodDate:"11/08/2025"},
+    {bms:"6024472", name:"Lama Saeed", prodDate:"11/08/2025"},
+    {bms:"6024474", name:"Mahmoud Hassan", prodDate:"11/08/2025"},
+    {bms:"6024475", name:"Mohad Eltalith", prodDate:"11/08/2025"},
+    {bms:"6024478", name:"Mohamed Metwally", prodDate:"11/08/2025"},
+    {bms:"6024481", name:"Nancy Ismail", prodDate:"11/08/2025"},
+    {bms:"6024482", name:"Omar Ahmed", prodDate:"11/08/2025"},
+    {bms:"6024484", name:"Omnia Mohamed", prodDate:"11/08/2025"},
+    {bms:"5972362", name:"Sameh Saad", prodDate:"16/06/2025"},
+    {bms:"5183248", name:"Ahmed Aboelkheir", prodDate:"22/09/2025"},
+    {bms:"5122602", name:"Ahmed Ibrahim", prodDate:"22/09/2025"},
+    {bms:"6073794", name:"Alaa Mekawy", prodDate:"22/09/2025"},
+    {bms:"5170235", name:"Karim Elsayed", prodDate:"22/09/2025"},
+    {bms:"6073795", name:"Karim Sharshira", prodDate:"22/09/2025"},
+    {bms:"4940910", name:"Mohamed Abdelhamid", prodDate:"22/09/2025"}
 ];
 
 // Load saved counters and comments from localStorage or initialize
